--- a/chat-app/templates/sketchpad.html
+++ b/chat-app/templates/sketchpad.html
@@ -27,7 +27,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
         <div id="canvas-wrapper">
 
-            <canvas height="485" width="632" id="c"></canvas>
+            <canvas style="border: 2px solid rgb(129,96,217); " height="485" width="632" id="c"></canvas>
             <div id="drawing-mode-options">
                
             </div>
@@ -40,7 +40,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer"></script>
                     <i class="fa-solid fa-arrow-pointer fa-lg" id="Pointer"></i>
                 </li>
                 <li class="brush">
-                    <i class="fa-solid fa-pencil fa-lg" id="Pencil"></i>
+                    <i class="fa-solid fa-paintbrush fa-lg" id="Pencil"></i>
                 </li>
                 <li class="brush" >
                     <i class="fa-solid fa-circle fa-lg" id="Circle"></i>
