--- a/chat-app/templates/hubbase.html
+++ b/chat-app/templates/hubbase.html
@@ -62,7 +62,7 @@
                     <a id = "mcq" href="/mcq"><i class="fa-solid fa-circle-question fa-lg"></i></a>
                 </li>
                 <li>
-                    <a id="sketchpad" href="/sketchpad"><i class="fa-solid fa-paintbrush fa-lg"></i></a>
+                    <a id="sketchpad" href="/sketchpad"><i class="fa-solid fa-palette fa-lg"></i></a>
                 </li>
                 <li>
                     <a id="sign_out" href="/signout"><i class="fa-solid fa-power-off fa-lg"></i></a>
@@ -79,8 +79,6 @@
 
                 <div class="container-fluid">
                     <h1 id="navbar-title">justask</h1>
-
-
                 </div>
             </nav>
             <div id="content-name">
