--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -58,7 +58,9 @@ Chat
                     <a><i class="fa-solid fa-tags fa-lg"></i></a>
                     <a><i class="fa-solid fa-paintbrush fa-lg"></i></a>
                     <a><i class="fa-solid fa-icons fa-lg"></i></a>
+                   
                 </div>
+                <div id="commenting-status">...replying to post</div>
                 <div id="sendmessage">
                     <form id="message_input_form" class="form-container" action="">
                         <button type="submit" id="post" class="btn"><i
