--- a/chat-app/templates/sketchpad.html
+++ b/chat-app/templates/sketchpad.html
@@ -55,6 +55,12 @@ crossorigin="anonymous" referrerpolicy="no-referrer"></script>
                 <li class="brush-manipulator">
                     <input class="not-fabric" type="color" value="#005E7A" id="drawing-color">
                 </li>
+                <li id="brush-size-wrapper">
+                    <input id="brush-size-slider" type="range" min="0" max="100" step="5">
+                </li>
+                <script>
+
+                </script>
 
             </ul>
         </div>
