--- a/chat-app/templates/mcq.html
+++ b/chat-app/templates/mcq.html
@@ -11,10 +11,12 @@
 
 <div id="media-wrapper">
     <div id="container-wrapper">
-    <div class="poll" id="poll">
-    <div class="question"></div>
-    <div class="answers"></div>
-    </div>
+        <div id="question-list-wrapper"> question list</div>
+
+        <div class="poll" id="poll">
+        <div class="question"></div>
+        <div class="answers"></div>
+        </div>
     </div>
     <div id="session-overview-master-wrapper">
         <div id="session-overview-wrapper">
