--- a/chat-app/static/css/profile.css
+++ b/chat-app/static/css/profile.css
@@ -14,6 +14,9 @@
     height:100%;
     
 }
+#profile-picture{
+    align-self: auto;
+}
 
 #profile-picture-child-wrapper{
     height:100%;
@@ -43,13 +46,32 @@
     border-radius: 30px;
     margin-bottom: 20px;
     padding:40px;
+    text-align: center;
+}
+
+#profile-picture-wrapper .mainDetails{
+    margin-top: 10px;
+    font-weight: 500;
+    color: white;
+}
+
+#profile-picture-wrapper .otherDetails{
+    /* font-weight: 500; */
+    color: white;
+    margin-bottom: -1px;
+}
+
+#profile-picture-wrapper hr{
+    border-top: 1px solid rgb(179,160,232);
 }
 
 
 .icon{
-
-    max-width:100%;
-    max-height:100%;
+    max-width:100px;
+    max-height:100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -72,21 +94,52 @@
     display:flex;
     flex-direction: row;
     justify-content: center;
-    padding:5px;
+    padding:6px;
+    align-items: center;
 
 }
 #profile-socials li{
-    padding-right:30px;
+    margin: 0px 15px;
 }
 
-.about-me{
-    background-color: rgb(250,250,250);
+#about-me-text-edit{
+    background-color: rgb(179,160,232);
     width:100%;
     margin-bottom: 10px;
+    border-radius: 8px;
+    resize: vertical;
+    height: 3em;
+    max-height: 400px;
 }
 
+#about-me-text-edit:focus{
+    outline: none;
+}
 
+/* rgb(129,96,217); */
+.submit-form-about{
+    color: white;
+    background-color: rgb(255, 255, 255, 0.4);
+    border-radius: 8px;
+    border-style: none;
+    padding: 5px 8px;
+    margin-top: 10px;
+    border: 1px rgb(255, 255, 255);
+    cursor:pointer;
+}
 
+.submit-form-about:hover, .submit-form:hover{
+    background-color: white;
+    color: rgb(129,96,217);
+    border: 1px solid transparent rgb(129,96,217);
+    box-shadow: 1px 1px 10px 0.1px rgb(129 96 217);
+}
+
+.about-me p{
+    font-size: 18px;
+    font-weight: 400;
+    color: white;
+}
 
 
 
@@ -175,7 +228,7 @@
 }
 .setting{
     padding:10px;
-    cursor:pointer;
+    /* cursor:pointer; */
 }
 .setting *{
     display:inline;
@@ -209,7 +262,7 @@
     margin-top:20px;
 }
 .collapse-button {
-    background-color: #777;
+    background-color: rgb(129,96,217);
     color: white;
     cursor: pointer;
     padding: 18px;
@@ -233,5 +286,56 @@
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
-    background-color: #f1f1f1;
+    background-color: rgb(179,160,232);
   }
+  /* rgb(179,160,232); */
+
+  .settings p{
+      color: black;
+      font-weight: 400;
+      margin-right: 10px;
+  }
+
+  .settings input{
+    background-color: rgb(204, 191, 239);
+    border-radius: 5px;
+    outline: none;
+    float: right;
+    border: 0;
+    
+    /* border: none; */
+  }
+
+  .settings input:focus{
+    background-color: rgb(255, 255, 255, 0.5);
+    outline: none;
+  }
+
+  .settings ::placeholder{
+    
+  }
+
+  .submit-form{
+    float: right;
+    /* margin-top: -40px; */
+    margin-right: -8px;
+    color: white;
+    background-color: rgb(129,96,217);
+    border-radius: 8px;
+    border-style: none;
+    cursor: pointer;
+    margin: 8px 10px
+  }
+
+  /* .submit-form:hover{
+    background-color: white;
+    color: rgb(129,96,217);
+    border: 1px solid transparent rgb(129,96,217);
+    box-shadow: 1px 1px 10px 0.1px rgb(129 96 217);
+  } */
+
+  #login-information-settings input{
+
+
+  }
+  
