--- a/chat-app/static/css/session.css
+++ b/chat-app/static/css/session.css
@@ -140,3 +140,13 @@ body {
 #sessionidgenerator:hover{
     color: rgb(206, 206, 206, 0.7);
 }
+
+
+.anonbox input:checked ~ .checkmark {
+    background-color: rgb(95, 68, 168);
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .anonbox:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
