--- a/chat-app/templates/session.html
+++ b/chat-app/templates/session.html
@@ -9,15 +9,26 @@ Session
 {% endblock %}
 {% block content %}
 
+{% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes>
+            {% for message in messages %}
+                <i id="error-message">{{ message }}</i>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+
 <script>
 
 
-    let title, joinsession, createsession, submitbutton, sessionIDGenerator, joinsessionbutton, createsessionbutton;
+    let title, joinsession, createsession, submitbutton, sessionIDGenerator, joinsessionbutton, createsessionbutton, anonBox;
     $(document).ready(function(){
         joinsession = $('#joinsessiontitle');
         createsession = $('#createsessiontitle');
         submitbutton = $('#submitsession');
         sessionIDGenerator = $('#sessionidgenerator')
+        anonBox = $('#anonbox')
 
         joinsessionbutton = $('#joinsessionselection');
         createsessionbutton = $('#createsessionselection');
@@ -32,6 +43,7 @@ Session
         createsession.css({"opacity" : 0});
         joinsession.css({"opacity" : 1});  
 
+        anonBox.css("visibility", "visible");
         sessionIDGenerator.css("visibility", "hidden");
         submitbutton.attr("name", "joinsession");
         submitbutton.text("Join Session");
@@ -47,6 +59,7 @@ Session
         createsession.css({"opacity" : 1});
 
         sessionIDGenerator.css("visibility", "visible");
+        anonBox.css("visibility", "hidden");
 
         submitbutton.attr("name", "createsession");
         submitbutton.text("Create Session")
@@ -94,7 +107,10 @@ Session
                 }
             </script>
             <strong><a id="sessionidgenerator" onclick = "GenerateSessionID()" style="cursor:pointer; visibility: hidden;">Generate Random ID</a></strong>
-           
+            <label class="anonbox" id="anonbox" style="cursor:pointer; visibility: hidden;">Stay Anonymous
+                <input type="checkbox" checked="checked">
+                <span class="checkmark"></span>
+            </label>
             <button id="submitsession" type="submit">Submit</button>
 
         </form>
