--- a/chat-app/templates/profile.html
+++ b/chat-app/templates/profile.html
@@ -41,14 +41,17 @@ Profile
                 </ul>
             </div>
 
+            
             <div id="profile-picture-about-me-wrapper" class="settings-bar">
-                <div id="about-me-wrapper">
+                <form class="aobut-me-form" action="/profile" method="POST">
+                    <div id="about-me-wrapper">
                     <div class="about-me" id="about-me">
                         <p>About me</p>
                         <textarea class="about-me" id="about-me-text-edit"></textarea>
                     </div>
                     <button class="submit-form-about" id="about-me-submit" name="about-me-submit">Submit</button>
                 </div>
+                </form>
             </div>
 
 
