--- a/chat-app/templates/session.html
+++ b/chat-app/templates/session.html
@@ -108,7 +108,7 @@ Session
             </script>
             <strong><a id="sessionidgenerator" onclick = "GenerateSessionID()" style="cursor:pointer; visibility: hidden;">Generate Random ID</a></strong>
             <label class="anonbox" id="anonbox" style="cursor:pointer; visibility: hidden;">Stay Anonymous
-                <input type="checkbox" checked="checked">
+                <input name = "isAnon" value="anon" type="checkbox" checked="checked">
                 <span class="checkmark"></span>
             </label>
             <button id="submitsession" type="submit">Submit</button>
