--- a/chat-app/templates/profile.html
+++ b/chat-app/templates/profile.html
@@ -35,8 +35,9 @@ Profile
                                 src="../static/assets/facebook.png"></a>
                     </li>
                     <li class="profile-social" id="twitter">
-                        <a href="{{twitter}}"><img width="30px" class="social-icon"
-                                src="../static/assets/twitter.png"></a>  
+                        <!-- <a href="{{twitter}}"><img width="30px" class="social-icon"
+                                src="../static/assets/twitter.png"></a>   -->
+                        <a href="{{twitter}}" class="fa fa-twitter"></a>
                     </li>
                     <li class="profile-social" id="linkedin">
                         <a href="{{linkedin}}"><img width="30px" class="social-icon"
