--- a/chat-app/static/css/profile.css
+++ b/chat-app/static/css/profile.css
@@ -6,14 +6,13 @@
     object-fit: contain;
 }
 #profile-picture-master-wrapper{
-    width:50%;
-    background-color:rgb(250,250,250);
-    display:flex;
+    width: 50%;
+    background-color: rgb(250,250,250);
+    display: flex;
     flex-direction: column;
-    padding:10px;
-    height:100%;
-    margin:10px;
-    
+    padding: 10px 0px 10px 40px;
+    height: 100%;
+    margin: 0px;
 }
 #profile-picture{
     align-self: auto;
@@ -31,7 +30,7 @@
 
 .settings-bar{
     border-radius: 30px;
-    background:rgb(129,96,217);
+    background:rgb(129,96,217,0.8);
 }
 
 .social-icon{
@@ -48,8 +47,10 @@
     height: fit-content;
     overflow:hidden;
     border-radius: 30px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
     margin-bottom: 20px;
-    padding:40px;
+    padding:20px 30px;
     text-align: center;
 }
 
@@ -62,6 +63,7 @@
 #profile-picture-wrapper .otherDetails{
     /* font-weight: 500; */
     color: white;
+    font-size: 14px;
     margin-bottom: -1px;
 }
 
@@ -112,11 +114,12 @@
 
 #about-me-text-edit{
     background-color: rgb(204, 191, 239);
-    width:100%;
+    width: 100%;
     border-radius: 8px;
     border: none;
     resize: vertical;
-    height: 3em;
+    padding: 5px 15px;
+    color: rgb(95, 68, 168);
     max-height: 400px;
 }
 
@@ -160,26 +163,31 @@
 }
 
 #profile-settings-wrapper{
-    width:85%;
+    width:90%;
     background-color: rgb(129 96 217); 
     position:relative;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
     overflow:scroll;
     overflow-x: hidden;
     overflow-y: auto; /* scroll only appears whenn necessary */
-    height: 90%;
-    padding: 20px 0px;
-    margin-top: -35px;
+    height: 95.9%;
+    padding: 20px 30px;
     border-radius: 30px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    align-self: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
 
 
 .form-impl{
     list-style-type: none;
+    border:none;
     padding:0;
     margin:0;
+}
+button:focus{
+    outline: none;
 }
 .user-information
 {
@@ -203,7 +211,6 @@
 {
     display:flex;
     flex-direction: row;
-    
     background-color: rgb(129,96,217);
     width:50%;
     height:50%;
@@ -279,6 +286,10 @@
     font-size: 15px;
   }
 
+  .collapse-button h1{
+      font-size: 2rem;
+  }
+
   .collapsible:after {
     content: '\002B';
     color: white;
@@ -290,6 +301,7 @@
   .settings {
     padding: 0 18px;
     max-height: 0;
+    border-radius: 10px;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     background-color: rgb(179,160,232);
@@ -297,9 +309,9 @@
   /* rgb(179,160,232); */
 
   .settings p{
-      color: black;
-      font-weight: 400;
-      margin-right: 10px;
+    color: rgb(95, 68, 168);
+    font-weight: 400;
+    margin-right: 10px;
   }
 
   .settings input{
@@ -343,12 +355,16 @@
  }
 
 .about-me-wrap{
-    border: 0.1px solid rgb(255,255,255,0.2);
+    border: 0.1px solid rgb(255,255,255,0.1);
     width: 100%;
-    background: rgb(255,255,255,0.2);
+    background-color: rgb(129,96,217,0.3);
     border-radius: 10px;
-    height: 150px;
+    height: 180px;
     margin: 15px 0px 0px;
+    overflow-wrap: break-word;
+    overflow: auto;
+    padding: 10px 20px;
+    text-align: left;
 }
 
 .fa-brands{
