--- a/chat-app/templates/profile.html
+++ b/chat-app/templates/profile.html
@@ -20,7 +20,7 @@ Profile
                 <p class="mainDetails">{{FIRSTNAME}} {{LASTNAME}}</p><hr>
                 <p class="otherDetails">{{USERNAME}}</p>
                 <p class="otherDetails">{{EMAIL}}</p><hr>
-                <strong style="float:left;color:white">About Me:</strong>
+                <strong style="float:left;color:rgb(95, 68, 168); margin-left: 5px">About Me:</strong>
                 <br><div class="about-me-wrap"> <p class="otherDetails">{{ABOUT_ME}}</p></div>
                 <br><hr>
                 <ul style="height:100%;width:100%;" id="profile-socials">
@@ -57,21 +57,21 @@ Profile
             <form class="settings" action="/profile" method="POST">
                 <ul id="personal-information-settings" class="form-impl">
                     <li class = "setting">
-                        <p>First Name</p>
+                        <p>First Name:</p>
                         <input type="text" name="firstname" placeholder = "{{FIRSTNAME}}">
                     </li>
          
                     <li class = "setting">
-                        <p>Last Name</p>
+                        <p>Last Name:</p>
                         <input type="text" name="lastname" placeholder = "{{LASTNAME}}">
 
                     </li>
                     <div class="about-me" id="about-me">
                         <p>About me</p>
-                        <textarea class="about-me" id="about-me-text-edit" name="about-me-text-edit"></textarea>
+                        <textarea class="about-me" id="about-me-text-edit" name="about-me-text-edit" placeholder="{{ABOUT_ME}}"></textarea>
                     </div>
                 </ul>
-                <button class="submit-form" name="personal-information-submit">Submit</button>
+                <button class="submit-form" name="personal-information-submit">Update</button>
             </form>
 
 
@@ -82,43 +82,43 @@ Profile
             <form class="settings"  action="/profile" method="POST">
                 <ul id="login-information-settings" class="form-impl">
                     <li class = "setting">
-                        <p>Email Address</p>
+                        <p>Email Address:</p>
                         <input type="text" name="email" placeholder="{{EMAIL}}">
 
                     </li>
                     <li class = "setting">
-                        <p>Username</p>
+                        <p>Username:</p>
                         <input type="text" name="username" placeholder = "{{USERNAME}}">
 
                     </li>
                 </ul>
-                <button class="submit-form" name="login-information-submit">Submit</button>
+                <button class="submit-form" name="login-information-submit">Update</button>
             </form>
 
 
             <button class="collapse-button">
-                <h1>Password Information</h1>
+                <h1>Password Information:</h1>
                 <i class="fa-solid fa-plus fa-lg" style="float:right;top:50%;"></i>
             </button>
             <form class="settings" action="/profile" method="POST">
                 <ul id="password-information-settings" class="form-impl">
                     <li class = "setting">
-                        <p>Old Password</p>
+                        <p>Old Password:</p>
                         <input type="password" name="old_password" placeholder="*******">
 
                     </li>
                     <li class = "setting">
-                        <p>New Password</p>
+                        <p>New Password:</p>
                         <input type="password" name="new_password">
 
                     </li>
                     <li class = "setting">
-                        <p>New Password Confirm</p>
+                        <p>New Password Confirm:</p>
                         <input type="password" name="new_password_confirm">
 
                     </li>
                 </ul>
-                <button class="submit-form" name="password-information-submit">Submit</button>
+                <button class="submit-form" name="password-information-submit">Update</button>
             </form>
 
 
@@ -130,27 +130,27 @@ Profile
                 <ul id="social-media-information-settings" class="form-impl">
 
                     <li class = "setting">
-                        <p>Instagram</p>
+                        <p>Instagram:</p>
                         <input type="text" name="instagram" placeholder="{{INSTAGRAM_PAGE}}">
 
                     </li>
                     <li class = "setting">
-                        <p>Facebook</p>
+                        <p>Facebook:</p>
                         <input type="text" name="facebook" placeholder = "{{FACEBOOK_PAGE}}">
 
                     </li>
                     <li class = "setting">
-                        <p>Twitter</p>
+                        <p>Twitter:</p>
                         <input type="text" name="twitter" placeholder = "{{TWITTER_PAGE}}">
 
                     </li>
                     <li class="setting">
-                        <p>Linkedin</p>
+                        <p>Linkedin:</p>
                         <input type="text" name="linkedin" placeholder = "{{LINKEDIN_PAGE}}">
 
                     </li>
                 </ul>
-                <button class="submit-form" name="social-media-information-submit">Submit</button>
+                <button class="submit-form" name="social-media-information-submit">Update</button>
 
             </form>
 
