--- a/chat-app/templates/profile.html
+++ b/chat-app/templates/profile.html
@@ -10,7 +10,7 @@ Profile
 {% block content %}
 
 
-<div id="profile-wrapper" style="width:100%; height:100%">
+<div id="profile-wrapper">
     <div id="profile-picture-master-wrapper" class="settings-bar">
         <div id="profile-picture-child-wrapper">
             <div id="profile-picture-wrapper" class="settings-bar">
