--- a/chat-app/static/css/mcq.css
+++ b/chat-app/static/css/mcq.css
@@ -313,8 +313,24 @@
     height: 100%;
     background-color: rgb(95, 68, 168, 0.8);
     color: white;
-    width: 20%;
+    width: 30%;
     text-align: center;
     padding-top: 20px;
 }
 
+.question-list{
+    background-color: rgb(255,255,255,0.1);
+    margin: 10px 18px;
+    padding: 8px 6px;
+    font-size: 12px;
+}
+
+.question-list:hover{
+    background-color: rgb(255,255,255,0.2);
+}
+#question-title{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-weight: 400;
+    color: rgb(255, 255, 255);
+}
