--- a/chat-app/templates/chat.html
+++ b/chat-app/templates/chat.html
@@ -36,8 +36,10 @@ Chat
 <div id="media-wrapper">
 
     <div id="chat-wrapper">
+        
         <div id="sorting">
-            <div id="sort-chat">sort by <i class="fa-solid fa-sort"></i>
+        <div id="sort-wrapper">
+            <div class="sortbuttons" id="sort-chat">sort by <i class="fa-solid fa-sort"></i>
             </div>
             <div class="sorters">
                 <a id="most-popular">Most Popular</a>
@@ -45,6 +47,16 @@ Chat
                 <a id="newest">Newest</a>
                 <a id="oldest">Oldest</a>
             </div>
+        </div>
+        <div id="filter-wrapper">
+            <div class="sortbuttons" id="filter-chat">filter by <i class="fa-solid fa-filter"></i>
+            </div>
+            <div class="filters">
+                <a id="question">Question</a>
+                <a id="discussion">Discussion</a>
+                <a id="feedback">Feedback</a>
+            </div>
+        </div>
         </div>
 
         <div id="messages">
