--- a/chat-app/templates/mcq.html
+++ b/chat-app/templates/mcq.html
@@ -8,7 +8,10 @@
 {% block content %}
 <div id="media-wrapper">
     <div id="container-wrapper">
-        <div id="question-list-wrapper"> question list</div>
+        <div id="question-list-wrapper"> 
+            <h4 id="question-title">Questions List</h4> 
+
+        </div>
 
         <div id="poll-wrapper">
         </div>
