disabled button for selected answer

--- a/chat-app/static/css/mcq.css
+++ b/chat-app/static/css/mcq.css
@@ -51,6 +51,9 @@
     pointer-events: none;
     opacity: 0.4;
 }
+.poll .answers .answer.disabledbutton2 {
+    pointer-events: none;
+}
 .poll .answers .answer span.percentage-value {
     position:absolute;
     top:50%;
